--- a/src/app/exo/exo6/exo6.component.html
+++ b/src/app/exo/exo6/exo6.component.html
@@ -3,30 +3,35 @@
 <div class="background">
     <div class="screen">
         <div class="pkm-left">
-            <div class="name">{{this.pokemon?.name}}</div>
+            <div class="name">{{this.pokemonDetails?.name}}</div>
             <div class="img">
-                <img class="imgSacha" *ngIf="!pokemon" src="https://66.media.tumblr.com/tumblr_mai132OrFS1rfjowdo1_500.gif" alt="Sacha et Pika">
-                <img *ngIf="pokemon" src="{{this.pokemon?.sprites?.back_default}}" alt="image back">
-                <img *ngIf="pokemon" src="{{this.pokemon?.sprites?.front_default}}" alt="image front">
+                <img class="imgSacha" *ngIf="!pokemonDetails" src="https://66.media.tumblr.com/tumblr_mai132OrFS1rfjowdo1_500.gif" alt="Sacha et Pika">
+                <img *ngIf="pokemonDetails" src="{{this.pokemonDetails?.sprites?.back_default}}" alt="image back">
+                <img *ngIf="pokemonDetails" src="{{this.pokemonDetails?.sprites?.front_default}}" alt="image front">
             </div>
-            <div class="description">{{this.pokemonDetails}}
+            <div class="description">{{this.pokemonFrenchDetails?.flavor_text}}
 
             </div>
             <div class="info">
-                <p class="infoInside">N°{{this.pokemon?.id}}</p>
-                <p class="infoInside">poids: {{this.pokemon?.weight}}</p>
-                <p class="infoInside">taille: {{this.pokemon?.height}}</p>
+                <p class="infoInside">N°{{this.pokemonDetails?.id}}</p>
+                <p class="infoInside">poids: {{this.pokemonDetails?.weight}}</p>
+                <p class="infoInside">taille: {{this.pokemonDetails?.height}}</p>
             </div>
         </div>
         <div class="pkm-right">
             <div class="pkm-list">Liste des pokemons</div>
             <ul>
-                <li class="pokemonSelect" *ngFor="let pokemon of pokemonList" (click)="getPokemonDetails(pokemon.name)">{{pokemon.name}}</li>
+                <li class="pokemonSelect" *ngFor="let item of pokemonList" (click)="userClick(item.name)">{{item.name}}</li>
             </ul>
-            <div class="next-previous">
-                <button (click)="previousPage()">⬆</button>
-                <button (click)="nextPage()">⬇</button>
+
+            <div class="next-previous">                
+                <button (click)="previousView()">⬆</button>
+                <button (click)="homeView()">🛖</button>
+                <button (click)="nextView()">⬇</button>
             </div>
+        </div>
+        <div>
+            <button>{{pokemonCount}}</button>
         </div>
     </div>
 
