Nom francais dans les détails écran gauche

--- a/src/app/exo/exo6/exo6.component.html
+++ b/src/app/exo/exo6/exo6.component.html
@@ -9,7 +9,7 @@
                 <img class="img" *ngIf="pokemonDetails" src="{{this.pokemonDetails?.sprites?.front_default}}" alt="image front">
                 <img class="img" *ngIf="pokemonDetails" src="{{this.pokemonDetails?.sprites?.back_default}}" alt="image back">
             </div>
-            <div class="description">{{this.pokemonFrenchDetails?.flavor_text}}
+            <div class="description">{{this.pokemonFrenchText?.flavor_text}}
 
             </div>
             <div class="info">
