Nom en francais dans la liste à droite mais lorque l'on fait l a requete pour les détails en cliquant sur le nom c'est le nom francais. Changé la requete sur base du nom par requete sur base de l'url associé au détails de la requete de base

--- a/src/app/exo/exo6/exo6.component.html
+++ b/src/app/exo/exo6/exo6.component.html
@@ -21,7 +21,7 @@
         <div class="pkm-right">
             <div class="pkm-list">Liste des pokemons</div>
             <ul>
-                <li class="pokemonSelect" *ngFor="let item of pokemonList" (click)="userClick(item.name)">{{item.name}}</li>
+                <li class="pokemonSelect" *ngFor="let item of pokemonListEnglish" (click)="userClick(item.name)">{{item.name}}</li>
             </ul>
 
             <div class="next-previous">                
